tons of copy changes

--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -64,12 +64,12 @@
 				{{#ifeq doubledown true}}
 
 				  <h1>Pay <strong>{{config.doubledownTimeCost}} coins</strong> to the pot to double down?</h1>
-				  <h2>Speak uninterupted for {{config.doubledownSeconds}} seconds. The floor is yours!</h2>
+				  <h2>Speak, uninterupted, for {{config.doubledownSeconds}} seconds. The floor is yours!</h2>
 
 				{{else}}
 
 				  <h1>Pay <strong>{{config.extraTimeCost}} coins</strong> to the pot to continue pitching?</h1>
-				  <h2>Recieve an additional {{config.extraSeconds}} seconds to continue pitching your proposal.</h2>
+				  <h2>Receive an additional {{config.extraSeconds}} seconds to continue pitching your proposal.</h2>
 
 				{{/ifeq}}
 
