--- a/templates/partials/shared/brainstorm.hbs
+++ b/templates/partials/shared/brainstorm.hbs
@@ -86,7 +86,7 @@
 		{{> component/instructions 
 				decider=true
 				heading="Wait for the timer to reach zero"
-				body='When the timer reaches zero announce "Times Up!" The screen will advance automatically.'
+				body='When the timer reaches zero say "Time\'s Up!" The screen will advance autmatically.'
 		}}
 		
 		{{> component/instructions 
