--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -8,7 +8,7 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
@@ -32,7 +32,7 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
@@ -56,7 +56,7 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
@@ -81,7 +81,7 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
@@ -105,7 +105,7 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
@@ -129,16 +129,16 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
 			decider=true
-			body="Once a winner is selected, each stakeholder's agenda items are revealed and the decider determines if the winning proposal includes that item."
+			body="Once a winner is selected, everyone's agenda items are revealed. The Decider then decides if they have been included in the winning proposal. "
 	}}
 
 	{{> component/speech 
-			body="Once a winner is selected, each stakeholder's agenda items are revealed and the decider determines if the winning proposal includes that item."
+			body="Once a winner is selected, everyone's agenda items are revealed. The Decider then decides if they have been included in the winning proposal. "
 	}}
 
 </div>
@@ -153,16 +153,16 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
 			decider=true
-			body="Stakeholders win all the coins in the pot if the decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
+			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
 	}}
 
 	{{> component/speech 
-			body="Stakeholders win all the coins in the pot if the decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
+			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
 	}}
 
 </div>
@@ -177,16 +177,16 @@
 
 	{{> component/instructions 
 			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+			body="The Decider will read the tutorial text aloud to the group and advance to the next screen"
 	}}
 
 	{{> component/speech 
 			decider=true
-			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of 3 rounds wins!"
+			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of three rounds wins!"
 	}}
 
 	{{> component/speech 
-			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of 3 rounds wins!"
+			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of three rounds wins!"
 	}}
 
 </div>
