--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -11,16 +11,16 @@
 		}}
 
 		{{> component/instructions 
-				heading="Listen to the decider"
+				heading="Listen to the Decider"
 		}}
 
 		{{> component/speech 
 				decider=true
-				body="Now that we have heard everyone's proposals, its time for me to decide a winner!"
+				body="Now that we have heard everyone's proposals, it is time for me to decide a winner!"
 		}}
 
 		{{> component/speech 
-				body="Now that we have heard everyone's proposals, its time for me to decide a winner!"
+				body="Now that we have heard everyone's proposals, it is time for me to decide a winner!"
 		}}
 
 	</div>
@@ -36,7 +36,7 @@
 				<div class="inner inner-winner">
 
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
-					<h2>{{pluralize winner.username}} proposal was selected by the Decider and recieves all the coins in the pot!</h2>
+					<h2>{{pluralize winner.username}} proposal was selected by the Decider and gets all the coins in the pot!</h2>
 
 			    <div id="reward-icon" class="player-box">
 				    <div class="coins">{{potAmount}}</div>
@@ -78,17 +78,17 @@
 		}}
 
 		{{> component/instructions 
-				heading="Listen to the decider"
+				heading="Listen to the Decider"
 				body="The Decider is about to determine if your agenda items are in the winning proposal!"
 		}}
 
 		{{> component/speech 
 				decider=true
-				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
+				body="Now that we have a winning proposal, let's reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
 		}}
 
 		{{> component/speech 
-				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
+				body="Now that we have a winning proposal, let's reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
 		}}
 
 	</div>
@@ -105,7 +105,7 @@
 						<div class="role form">
 							
 							<h1>{{this}}</h1>
-							<h2>The decider is reviewing this agenda item to determine if it is in the winning proposal.</h2>
+							<h2>The Decider is reviewing this agenda item to determine if it is in the winning proposal.</h2>
 							
 								<button id="btn_yes" class="btn btn-default post-button submit" data-event="game:agenda_yes" data-keep_open="true" data-package='{{../uid}}'>
 					        Yes
@@ -124,7 +124,7 @@
 				<div class="inner-modal player agenda_item">
 					<div class="inner choice">
 						<h1>{{this}}</h1>
-						<h2>The decider is reviewing this agenda item to determine if it is in the winning proposal.</h2>
+						<h2>The Decider is reviewing this agenda item to determine if it is in the winning proposal.</h2>
 				  </div>
 				</div>
 
@@ -132,7 +132,7 @@
 				<div class="inner-modal agenda_item yes" data-duration="{{../../config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
 					<div class="inner">
 						<h1>Congratulations, <strong>{{../username}}</strong>!</h1>
-						<h2>Your agenda item <span class="item">{{this}}</span> is included in the winning proposal. You win {{agendaReward ../../config.rewardAmounts @index}} coins</h2>
+						<h2>Your agenda item - <span class="item">{{this}}</span> - was included in the proposal. You win {{agendaReward ../../config.rewardAmounts @index}} coins</h2>
 
 					    <div id="reward-icon" class="pitch player-box">
 						    <div class="coins"></div>
@@ -148,7 +148,7 @@
 				<div class="inner-modal agenda_item no" data-duration="{{../../config.decideDuration}}" data-next="{{nextAgendaEvent ../../playerCount @../index @last}}">
 					<div class="inner">
 						<h1>Sorry, <strong>{{../username}}..</strong>.</h1>
-						<h2>Your agenda item <span class="item">{{this}}</span> was not included in the winning proposal</h2>
+						<h2>Your agenda item - <span class="item">{{this}}</span> - was not included in the winning proposal</h2>
 
 					    <div id="player-{{../icon}}" class="pitch player-logo player-box">
 						    <div class="coins"></div>
@@ -184,11 +184,11 @@
 		{{> component/speech 
 				decider=true
 				advance=true
-				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead."
+				body="Congratulations, everyone! Now we will see everyone's new score and find out who is in the lead."
 		}}
 
 		{{> component/speech 
-				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead."
+				body="Congratulations, everyone! Now we will see everyone's new score and find out who is in the lead."
 		}}
 
 	</div>
