--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -38,7 +38,7 @@
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
 					<h2>{{pluralize winner.username}} proposal was selected by the Decider and gets all the coins in the pot!</h2>
 
-			    <div id="reward-icon" class="player-box">
+			    <div id="reward-icon" class="decided player-box">
 				    <div class="coins">{{potAmount}}</div>
 					  <div class="info">
 						  <h1>{{winner.username}}</h1>
@@ -134,7 +134,7 @@
 						<h1>Congratulations, <strong>{{../username}}</strong>!</h1>
 						<h2>Your agenda item - <span class="item">{{this}}</span> - was included in the proposal. You win {{agendaReward ../../config.rewardAmounts @index}} coins</h2>
 
-					    <div id="reward-icon" class="pitch player-box">
+					    <div id="reward-icon" class="decided player-box">
 						    <div class="coins"></div>
 							  <div class="info">
 								  <h1>{{../username}}</h1>
@@ -150,7 +150,7 @@
 						<h1>Sorry, <strong>{{../username}}..</strong>.</h1>
 						<h2>Your agenda item - <span class="item">{{this}}</span> - was not included in the winning proposal</h2>
 
-					    <div id="player-{{../icon}}" class="pitch player-logo player-box">
+					    <div id="player-{{../icon}}" class="decided player-logo player-box">
 						    <div class="coins"></div>
 							  <div class="info">
 								  <h1>{{../username}}</h1>
