--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -12,6 +12,7 @@
 
 		{{> component/instructions 
 				heading="Listen to the Decider"
+				body="The Decider is about to choose a winner!"
 		}}
 
 		{{> component/speech 
