--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -114,7 +114,7 @@ var setupScreen = function(screenName) {
     $(isDecider ? '.player' : '.decider').remove();
 
 
-    if(screenName === 'debrief') {
+    if(screenName == 'debrief') {
         $('#gameContent').removeClass('in-game');
         $('#bottom-bar').hide();
     }
