modal height on small screens important

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -751,7 +751,7 @@ input.post-button {
 	}
 
 	.decide-winner {
-		height: 432px;
+		height: 432px !important;
 		h1 {
 			font-family: AvenirNext-DemiBold;
 			font-size: 20px;
