style small screen

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -26,8 +26,8 @@
 
 
 	body .inner-modal .inner .player-box {
-		background-position: 20px center;
-		padding-left: 5%;
+		background-position: 10px center;
+		padding-left: 10px;
 		.coins {
 			padding-top: 40px;
 			padding-left: 15px;
