--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -15,6 +15,20 @@
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+            {{#ifeq env "production"}}
+
+                <script type="text/javascript">
+                    window.smartlook||(function(d) {
+                    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+                    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+                    c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+                    })(document);
+                    smartlook('init', 'e8a77969b13f06c2f19a4afa7c9cc3333887ac7c');
+                </script>
+            
+            {{/ifenv}}
+        
         {{else}}
          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         {{/ifeq}}
