--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -27,7 +27,7 @@
                     smartlook('init', 'e8a77969b13f06c2f19a4afa7c9cc3333887ac7c');
                 </script>
             
-            {{/ifenv}}
+            {{/ifeq}}
         
         {{else}}
          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
