--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -26,32 +26,10 @@ $(document).ready(function() {
 
 });
 
-{{#ifnoteq environment "production"}}
-{{#ifnoteq environment "development"}}
-    {{!-- Smartlook integration --}}
-   {{!--  window.smartlook||(function(d) {
-        var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-        var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-        c.charset='utf-8';c.src='//rec.getsmartlook.com/recorder.js';h.appendChild(c);
-        })(document);
-        smartlook('init', 'f70bc72265f75e886b23785202aafc01c9b5c2e1');
-
-    // Warn about reloading
-    window.addEventListener("onbeforeunload", function (e) {
-
-      (e || window.event).returnValue = null;
-      return null;
-
-    }); --}}
-{{/ifnoteq}}
-{{/ifnoteq}}
-
 // Tap away any errors
 $(document).on('click touchstart', 'div.error:not(.menu)', function() {
     $(this).hide();
 });
-
-
 
 // Remove debugging for emulated (debug) player
 if(isEmulated)
@@ -77,7 +55,6 @@ var playerLogin = function(data) {
 
     playerName = $('#player-name').val();
     playerName = playerName.replace(' ','');
-    console.log(playerName);
 
     sessionStorage.setItem('username', playerName);
     // sessionStorage.setItem('gameCode', gameCode);
@@ -242,9 +219,7 @@ newGameHandler = function() {
 $(document).on('click', '.btn.submit_name', function(evt) {
 
     var data = getFormData($(this));
-    var errorBox = $('.form .error');
-
-    
+    var errorBox = $('.form .error');    
 
     // Hide errors during typing
     $('.form input').keyup(function() {
@@ -261,7 +236,6 @@ $(document).on('click', '.btn.submit_name', function(evt) {
     }
 
     data.name = data.name.replace(' ','');
-    console.log(data.name);
 
     $('#username').text(data.name);
 
@@ -367,9 +341,13 @@ $(document).on('click', '.btn.game_login', function(evt) {
 
             ga('send', 'event', 'Login', 'Username', username);
 
+            {{#ifeq environment "production"}}                   
+                smartlook('tag', 'username', username);
+                smartlook('tag', 'code', gameCode);
+            {{/ifeq}}
+
             data.uid = playerUID;
             playerLogin(data);                          
-
 
             loginFromTo('join', 'lobby', .7);
 
