Don't restart at particular pitch screen.

--- a/templates/partials/shared/pitch.hbs
+++ b/templates/partials/shared/pitch.hbs
@@ -77,8 +77,7 @@
 	</div>
 
 	{{!-- COUNTDOWN START --}}
-	{{!-- this is where phase re-starts for subsequent players --}}
-	<div class="screen restart">
+	<div class="screen {{!-- restart --}}">
 
 		{{> component/instructions
 				decider=true 
