--- a/templates/partials/shared/deliberate.hbs
+++ b/templates/partials/shared/deliberate.hbs
@@ -17,11 +17,11 @@
 
 		{{> component/speech 
 				decider=true
-				body=(combine 'Now that we heard everyone\'s pitch, we will take ' config.deliberateSeconds ' seconds to talk about your proposals. This will be an open discussion led by the Decider.')
+				body=(combine 'Now that we have heard everyone\'s pitch, we will take ' config.deliberateSeconds ' seconds to talk about your proposals. This will be an open discussion led by the Decider.')
 		}}
 
 		{{> component/speech 
-				body=(combine 'Now that we heard everyone\'s pitch, we will take ' config.deliberateSeconds ' seconds to talk about your proposals. This will be an open discussion led by the Decider.')
+				body=(combine 'Now that we have heard everyone\'s pitch, we will take ' config.deliberateSeconds ' seconds to talk about your proposals. This will be an open discussion led by the Decider.')
 		}}
 
 	</div>
