Mispelling word (recieve)

--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -158,11 +158,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
+			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal receive bonus coins."
 	}}
 
 	{{> component/speech 
-			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
+			body="Stakeholders win all the coins in the pot if the Decider selects their proposal, and any stakeholder whose agenda items are in that proposal receive bonus coins."
 	}}
 
 </div>
