--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -30,6 +30,7 @@ $red-light: #ff8c53;
 // Orange
 $color-orange: #ff9600;
 $orange-dark: #ff7800;
+$orange-trans: rgba(254, 120, 70, 0.9);
 $orange-light: #ffbe0f;
 $sunflower: #ffbe0f;
 $tangerine: #ff9600;
