--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -139,7 +139,7 @@ var setupScreen = function(screenName) {
 
 var playerDisconnected = function(timeoutTime, names) {
 
-    openInnerModal();
+    // openInnerModal();
 
     if(!names || names.length === 0)
         return;
