--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -65,10 +65,10 @@
                 <section id="error-disconnected" class="modal error-modal">
                 </section>
 
-                <section id="error-player-disconnected" class="modal error-modal">
+                <section id="error-player-disconnected" class="notification">
                     <div id="text" class="col-sm-10 col-xs-12 col-centered">
-                      <h1>Ummm...</h1>
-                      <h2>It looks like <span id="player"></span> <span id="singular">is</span><span id="plural">are</span> disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
+                      {{!-- <h1>Ummm...</h1> --}}
+                      <span id="player"></span> disconnected.
                     </div>
                 </section>
 
